Name:                vhd
Version:             0.2.1
Synopsis:            Provides functions to inspect and manipulate virtual hard disk (VHD) files.
Description:         Provides functions to inspect and manipulate virtual hard disk (VHD) files, according to the VHD specification (version 1.0).
Author:              Jonathan Knowles, Vincent Hanquez
Maintainer:          jonathan.knowles@eu.citrix.com
Copyright:           Citrix Systems Inc.
License:             BSD3
License-file:        LICENCE
Stability:           Experimental
Category:            System
Build-type:          Simple
Homepage:            https://github.com/jonathanknowles/hs-vhd
Cabal-version:       >=1.8
Data-files:          README

Flag executable
  Description:       Build executables
  Default:           False

Library
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , filepath
                   , mmap
                   , text
                   , time
                   , cereal
                   , random
                   , storable-endian
  Exposed-modules:   Data.Vhd
                     Data.Vhd.Lowlevel
  Other-modules:     Data.BitSet
                     Data.Range
                     Data.Vhd.Bat
                     Data.Vhd.Bitmap
                     Data.Vhd.Block
                     Data.Vhd.Checksum
                     Data.Vhd.Node
                     Data.Vhd.Geometry
                     Data.Vhd.Serialize
                     Data.Vhd.Types
                     Data.Vhd.Utils

Test-Suite test-vhd
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests .
  main-is:           Tests.hs
  build-depends:     base
                   , bytestring
                   , test-framework >= 0.3.3
                   , test-framework-quickcheck2
                   , QuickCheck >= 2.4.0.1
                   , bytestring
                   , filepath
                   , mmap
                   , text
                   , time
                   , cereal
                   , random
                   , vhd

Executable           vhd
  Main-Is:           Vhd.hs
  hs-source-dirs:    Tools .
  if flag(executable)
    Buildable:       True
    Build-depends:   base >= 3 && < 5
                   , bytestring
                   , filepath
                   , mmap
                   , text
                   , time
                   , cereal
                   , random
                   , storable-endian
                   , vhd
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/jonathanknowles/hs-vhd
